--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*, *::before, *::after {
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    background: #AD1519;
+    background: -webkit-linear-gradient( to right, #E0115F, #AD1519 );
+    background: linear-gradient( to right, #E0115F, #AD1519 ); 
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+ul {
+    border-radius: 15px;
+    list-style: none;
+    margin: 0 auto;
+    padding: 0;
+}
+
+li {
+    padding: 6px;
+}
+
+.data-quotation {
+    text-decoration: underline;
+    text-transform: capitalize;
 }
